# ENSC351

./: README.md
public/: extlinux_conf.txt  setup.txt
public/myApps/: a1  a1Test  as2  as2_d  hello_world  ledTest  libfreenect2.so.0.2  project
public/myApps/.shaders/: 5B2C5ADA49A07BEB.blob
work/myApps/: helloworld_host  noworky
work/myApps/as2/app/include/: udp.h
work/myApps/as2/app/src/: main.c  sampler.c  udp.c
work/myApps/as2/hal/src/: gpio.c
work/myApps/as2Submission/: as2.tgz
work/myApps/as2_d/app/: CMakeLists.txt
work/myApps/cmake_starter/app/: CMakeLists.txt
work/myApps/cmake_starter/app/src/: main.c  reaction_methods.c  reaction_methods.h
work/myApps/cmake_starter/hal/include/hal/: joystick.h
work/myApps/cmake_starter/hal/src/: joystick.c  led.c
